--- a/src/markdown/mas/dubbeltellingen.Rmd
+++ b/src/markdown/mas/dubbeltellingen.Rmd
@@ -1415,6 +1415,8 @@ dubbels_2022_df_broed <- dubbels_2022_df_broed %>%
 
 ## Exploratie
 
+Op het eerste zicht zien we geen ovallend grote verschillen in aantal soorten gezien tenzij voor broedcode 3.
+
 ```{r}
 diversiteit_df_broed <- dubbels_2022_df_broed %>%
   group_by(plotnaam, periode_in_jaar, status, wrntype) %>%
@@ -1436,6 +1438,8 @@ ggplot(diversiteit_df_broed) +
   facet_wrap(~status) +
   labs(x = "Broedcode", y = "Aantal soorten")
 ```
+
+Als we de broedcodes > 0 samen nemen zien we ook geen groot verschil in aantal soorten tussen professionelen en vrijwilligers.
 
 ```{r}
 diversiteit_df_broed %>%
@@ -1464,6 +1468,8 @@ diversiteit_df_broed %>%
 
 ### Waarnemingen
 
+We zien gelijkaardige trends als bij het aantal soorten.
+
 ```{r}
 waarnemingen_df_broed <- dubbels_2022_df_broed %>%
   group_by(plotnaam, periode_in_jaar, status, wrntype) %>%
@@ -1485,7 +1491,6 @@ ggplot(waarnemingen_df_broed) +
   facet_wrap(~status) +
   labs(x = "Broedcode", y = "Aantal waarnemingen")
 ```
-
 
 ```{r}
 waarnemingen_df_broed %>%
@@ -1510,3 +1515,41 @@ waarnemingen_df_broed %>%
     facet_wrap(~status) +
     labs(x = "Broedcode", y = "Aantal waarnemingen")
 ```
+
+
+### Relatieve frequenties
+
+Wanneer we geen broedcode 0 beschouwden, zagen we een opvallend verschil in relatieve frequentie tussen vrijwilligers en professionelen in enkele algemene/eenvoudige soorten als Kauw, Merel en Holenduif. Mogelijks zagen de vrijwilligers die soorten wel, maar gaven ze deze vaker in als broedcode 0. We maken opnieuw de tabel van relatieve frequenties om te zien of dit nu wel een ander beeld geeft.
+
+```{r}
+relfreqs <- dubbels_2022_df_broed %>%
+  group_by(plotnaam, periode_in_jaar, status, naam) %>%
+  summarize(totaal_aantal = sum(aantal),
+            .groups = "drop") %>%
+  pivot_wider(names_from = naam,
+              values_from = totaal_aantal,
+              values_fill = list(totaal_aantal = 0)) %>%
+  group_by(periode_in_jaar, status) %>%
+  summarise(across(.cols = where(~ is.integer(.x) && min(.x) == 0),
+                   .fns = ~sum(.x > 0) / n()),
+                   .groups = "drop") %>%
+  pivot_longer(cols = where(is.double),
+               names_to = "naam",
+               values_to = "relfreq")
+
+relfreq_diffs <- relfreqs %>%
+  group_by(status, naam) %>%
+  mutate(gemiddelde_freq = mean(relfreq)) %>%
+  distinct(status, naam, gemiddelde_freq) %>%
+  pivot_wider(names_from = status,
+              values_from = gemiddelde_freq,
+              values_fill = 0) %>%
+  mutate(verschilfreq = professioneel - vrijwilliger) %>%
+  ungroup() %>%
+  arrange(desc(verschilfreq))
+
+relfreq_diffs %>%
+  kable(digits = 3)
+```
+
+De verschilfrequenties verschillen licht, maar we zien nog altijd vrij grote verschillen (bv. Merel). Een mogelijke verklaring is dat vrijwilligers deze algemene soorten niet gaan noteren omdat deze "niet speciaal" genoeg zijn.
