--- a/src/markdown/mas/dubbeltellingen.Rmd
+++ b/src/markdown/mas/dubbeltellingen.Rmd
@@ -1564,3 +1564,8 @@ relfreq_diffs %>%
 ```
 
 De verschilfrequenties verschillen licht, maar we zien nog altijd vrij grote verschillen (bv. Merel). Een mogelijke verklaring is dat vrijwilligers deze algemene soorten niet gaan noteren omdat deze "niet speciaal" genoeg zijn.
+
+
+
+
+testen -> interactie factor broedcode (0, >0) met status
