--- a/src/markdown/mas/dubbeltellingen.Rmd
+++ b/src/markdown/mas/dubbeltellingen.Rmd
@@ -1669,3 +1669,116 @@ dubbels_2022_df_broed_soortenrijkdom %>%
 ```
 
 
+### Modellen fitten
+
+We fitten 3 modellen met **brms**.
+
+- Normaal verdeling
+- Poisson verdeling
+- Negatief binomiaal verdeling
+
+```{r}
+model_path <- "./src/markdown/mas/brms_models/"
+
+# MCMC parameters
+nchains <- 3           # number of chains
+niter <- 4000          # number of iterations (incl. burn-in)
+burnin <- niter / 2    # number of initial samples to discard (burn-in)
+nparallel <- nchains   # number of cores used for parallel computing
+
+# 1. Normal
+dubbel_soorten_norm2 <- brm(
+  bf(n ~ status*broedcode + (1 | plotnaam) + (1 | plotnaam:periode_in_jaar)), 
+  data = dubbels_2022_df_broed_soortenrijkdom, family = gaussian(), seed = 1234,
+  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
+  file = paste0(model_path, "dubbel_soorten_norm2"),
+  file_refit = "on_change")
+
+# 2. Poisson
+dubbel_soorten_pois2 <- brm(
+  bf(n ~ status*broedcode + (1 | plotnaam) + (1 | plotnaam:periode_in_jaar)), 
+  data = dubbels_2022_df_broed_soortenrijkdom, family = poisson(), seed = 1234,
+  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
+  file = paste0(model_path, "dubbel_soorten_pois2"),
+  file_refit = "on_change")
+
+# 3. Negative binomial
+dubbel_soorten_negbin2 <- brm(
+  bf(n ~ status*broedcode + (1 | plotnaam) + (1 | plotnaam:periode_in_jaar)), 
+  data = dubbels_2022_df_broed_soortenrijkdom, family = negbinomial(), seed = 1234,
+  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
+  control = list(adapt_delta = 0.9),
+  file = paste0(model_path, "dubbel_soorten_negbin2"),
+  file_refit = "on_change")
+```
+
+### Model selectie
+
+We vergelijken de modellen gebruikmakend van leave-one-out cross-validation.
+
+```{r}
+# Perform leave-one-out cross-validation
+if (!file.exists(paste0(model_path, "fit_dubbel_soorten_norm2.rds"))) {
+  fit_dubbel_soorten_norm2 <- add_criterion(dubbel_soorten_norm2, 
+    criterion = c("loo"), 
+    file = paste0(model_path, "fit_dubbel_soorten_norm2"))
+  fit_dubbel_soorten_pois2 <- add_criterion(dubbel_soorten_pois2, 
+    criterion = c("loo"), 
+    file = paste0(model_path, "fit_dubbel_soorten_pois2"))
+  fit_dubbel_soorten_negbin2 <- add_criterion(dubbel_soorten_negbin2, 
+    criterion = c("loo"), 
+    file = paste0(model_path, "fit_dubbel_soorten_negbin2"))
+} else {
+  fit_dubbel_soorten_norm2 <- readRDS(paste0(model_path, 
+                                             "fit_dubbel_soorten_norm2.rds"))
+  fit_dubbel_soorten_pois2 <- readRDS(paste0(model_path, 
+                                             "fit_dubbel_soorten_pois2.rds"))
+  fit_dubbel_soorten_negbin2 <- readRDS(paste0(model_path, 
+                                             "fit_dubbel_soorten_negbin2.rds"))
+}
+```
+
+```{r}
+# Comparison among models
+models_soorten <- data.frame(
+  naam = c("normaal", 
+           "poisson", 
+           "negatief binomiaal"),
+  model = c("fit_dubbel_soorten_norm2", 
+            "fit_dubbel_soorten_pois2", 
+            "fit_dubbel_soorten_negbin2"))
+
+
+loo_compare(
+    fit_dubbel_soorten_norm2, 
+    fit_dubbel_soorten_pois2, 
+    fit_dubbel_soorten_negbin2, 
+    criterion = "loo") %>%
+  as.data.frame() %>%
+  rownames_to_column("model") %>%
+  left_join(models_soorten, by = "model") %>%
+  select(model = naam, elpd_loo, p_loo, looic, elpd_diff, se_diff) %>%
+  mutate(CI_ll = elpd_diff  + qnorm(0.025) * se_diff,
+         CI_ul = elpd_diff  + qnorm(0.975) * se_diff) %>%
+  arrange(desc(elpd_diff)) %>%
+  kable(digits = 3)
+```
+
+```{r}
+pp_check(fit_dubbel_soorten_norm2, type = "dens_overlay_grouped", ndraws = 100, 
+         group = "status")
+
+pp_check(fit_dubbel_soorten_pois2, type = "bars_grouped", ndraws = 100, 
+         group = "status", facet_args = list(ncol = 1, scales = "free_y"))
+
+pp_check(fit_dubbel_soorten_negbin2, type = "bars_grouped", ndraws = 100, 
+         group = "status", facet_args = list(ncol = 1, scales = "free_y"))
+```
+
+Hoewel we discrete data hebben, besluiten we dat normale glm met normaal verdeling het beste past bij de data. De resultaten voor alle drie de modellen zijn gelijkaardig.
+  
+We zien goede convergentie.
+
+```{r}
+plot(fit_dubbel_soorten_norm2)
+```
